--- a/src/default_config.json
+++ b/src/default_config.json
@@ -1,5 +1,6 @@
 {
-    "ten_phong_kham": "Phòng khám chuyên khoa nhi - BS Vương Kiến Thanh",
+    "ten_phong_kham": "Phòng khám chuyên khoa nhi - Bs Vương Kiến Thanh",
+    "ky_ten_bac_si": "Bs Vương Kiến Thanh",
     "cong_kham_benh": 50000,
     "so_ngay_toa_ve_mac_dinh": 2,
     "so_luong_thuoc_toi_thieu_de_bao_dong_do": 20,
