--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ wxPython = [
 wxPython310 = { version = "~4.1.2-alpha.2", platform = "win32" }
 
 
+[tool.poetry.dev-dependencies]
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
