--- a/src/default_config.json
+++ b/src/default_config.json
@@ -1,6 +1,8 @@
 {
     "ten_phong_kham": "Phòng khám chuyên khoa nhi - Bs Vương Kiến Thanh",
     "ky_ten_bac_si": "Bs Vương Kiến Thanh",
+    "dia_chi": "142 đường 55, P.Tân Tạo, Q.Bình Tân",
+    "so_dien_thoai": "0908.034.298",
     "cong_kham_benh": 50000,
     "so_ngay_toa_ve_mac_dinh": 2,
     "so_luong_thuoc_toi_thieu_de_bao_dong_do": 20,
@@ -13,5 +15,6 @@
         "Dấu hiệu chung": "Khám lại khi trẻ có những dấu hiệu sau: co giật, ngủ li bì hay vật vã, bứt rứt, thở mệt, nôn ói nhiều, sốt cao liên tục, tiêu máu",
         "Dấu hiệu nặng TCM": "Sốt cao ≥39 độ C hay sốt liên tục trên 2 ngày - Giật mình, chới với, hốt hoảng bất thường - Ngủ gà, li bì hay bứt rứt - Run giật tay chân bất thường - Yếu tay chân, ngồi không vững, đi đứng loạng choạng - Thở bất thường: không đều, thở nhanh - Nuốt sặc, thay đổi giọng nói",
         "Dấu hiệu nặng SXH": "Lừ đừ, bứt rứt - Lạnh tay chân khi trẻ đã hết sốt (thường vào ngày thứ 4, thứ 5 của bệnh) - Đau bụng - Ói nhiều - Chảy máu bất thường: Chảy máu răng, máu mũi, đi cầu phân đen, ói ra máu"
-    }
+    },
+    "hien_thi_gia_tien": true
 }
