change default config

--- a/src/default_config.json
+++ b/src/default_config.json
@@ -1,8 +1,8 @@
 {
     "ten_phong_kham": "Phòng khám chuyên khoa nhi - Bs Vương Kiến Thanh",
     "ky_ten_bac_si": "Bs Vương Kiến Thanh",
-    "dia_chi": "142 đường 55, P.Tân Tạo, Q.Bình Tân",
-    "so_dien_thoai": "0908.034.298",
+    "dia_chi": "Qui laboriosam corporis non quasi maiores velit culpa",
+    "so_dien_thoai": "0909.222.111",
     "cong_kham_benh": 50000,
     "so_ngay_toa_ve_mac_dinh": 2,
     "so_luong_thuoc_toi_thieu_de_bao_dong_do": 20,
